fix path of post-detail API
